--- a/src/Pages/App/Contact/Contact.scss
+++ b/src/Pages/App/Contact/Contact.scss
@@ -7,10 +7,11 @@
         position: absolute;
         object-position: center;
         width: 100%;
+        height: 260px;
         object-fit: cover;
     }
 
-    .title {
+    .titlee {
         @media (max-width: 1000px) {
             background-size: cover;
         }
@@ -18,7 +19,7 @@
         position: relative;
 
         width: 100%;
-        height: 280px;
+        height: 260px;
         background-repeat: no-repeat;
         background-position: top;
         background-size: cover;
