--- a/src/components/molecules/Header/Header.scss
+++ b/src/components/molecules/Header/Header.scss
@@ -21,6 +21,7 @@
     @media (max-width: 1000px) {
       justify-content: space-between;
       padding: 0 30px;
+      // color: #fd0000;
 
     //   position: relative;
     }
@@ -118,6 +119,6 @@
 
   }
   a{
-    color: white !important;
+    color: white;
   }
 }
